--- a/hw/bsp/nucleo144-l4r5zi/syscfg.yml
+++ b/hw/bsp/nucleo144-l4r5zi/syscfg.yml
@@ -45,6 +45,10 @@ syscfg.defs:
     TIMER_2:
         description: 'Timer 2'
         value:  0
+    
+    SPI_1:
+        description: 'SPI1 in master mode'
+        value: 1
 
 syscfg.vals:
     REBOOT_LOG_FLASH_AREA: FLASH_AREA_REBOOT_LOG
@@ -55,3 +59,6 @@ syscfg.vals:
     
     #CONSOLE_UART_DEV: '"uart1"'
     #CONSOLE_UART_BAUD: 115200
+
+syscfg.vals.SPI_1:        
+    SPI_0_MASTER: 1
