addded support of motion detection in my_button_apps. Motion triggers send_datacollector() in the same way as button.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,7 +31,7 @@
                 "debugServerArgs": "-f interface\\stlink-v2.cfg -f target\\stm32l4x.cfg -c init -c \"reset init\"",
                 "serverLaunchTimeout":20000,
                 "filterStderr":true,
-                "filterStdout":false,
+                "filterStdout":true,
                 "serverStarted":"target halted due to debug-request, current mode: Thread",
                 "setupCommands":[
                     {
