added driver interface for uart-bitbang

--- a/hw/bsp/nucleo144-l4r5zi/pkg.yml
+++ b/hw/bsp/nucleo144-l4r5zi/pkg.yml
@@ -47,3 +47,5 @@ pkg.deps.UART_1:
     - "@apache-mynewt-core/hw/drivers/uart/uart_hal"
 pkg.deps.UART_2:
     - "@apache-mynewt-core/hw/drivers/uart/uart_hal"
+pkg.deps.UART_BITBANG:
+    - "@apache-mynewt-core/hw/drivers/uart/uart_bitbang"
