added device driver interface type for libs/gps_xxx and libs/bc95g

--- a/libs/custom_coap/pkg.yml
+++ b/libs/custom_coap/pkg.yml
@@ -30,3 +30,6 @@ pkg.deps:
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/hw/sensor"
+
+pkg.init:
+    init_custom_coap: 660  # Call init_custom_coap() to initialise the Sensor CoAP module during startup
