--- a/apps/blink/syscfg.yml
+++ b/apps/blink/syscfg.yml
@@ -52,3 +52,5 @@ syscfg.vals:
     OS_SYSVIEW_TRACE_EVENTQ:  0  # Disable trace of event queues
     OS_SYSVIEW_TRACE_MUTEX:   0  # Disable trace of mutex
     OS_SYSVIEW_TRACE_SEM:     0  # Disable trace of semaphores
+    OS_WATCHDOG_MONITOR:      0  # Disable the watchdog
+
