--- a/libs/lowpower_mgnt/pkg.yml
+++ b/libs/lowpower_mgnt/pkg.yml
@@ -17,37 +17,14 @@
 # under the License.
 #
 
-### Entries containing `***` need to be replaced with actual values.
-
-pkg.name: "hw/bsp/nucleo144-l4r5zi"
-pkg.type: bsp
+pkg.name: "libs/lowpower_mgnt"
 pkg.description: "Description of your package"
 pkg.author: "You <you@you.org>"
 pkg.homepage: "http://your-url.org/"
 pkg.keywords:
-    - stm32
-    - stm32l4
-    - nucleo
-
-pkg.cflags:
-    - -DSTM32L4xx
-    - -DSTM32L4R5xx
-
-pkg.cflags.HARDFLOAT:
-    - -mfloat-abi=hard -mfpu=fpv4-sp-d16
 
 pkg.deps:
-    #- '@apache-mynewt-core/kernel/os'
-    - "@apache-mynewt-core/hw/mcu/stm/stm32l4xx"
-    - '@apache-mynewt-core/libc/baselibc'
+#    - "hw/bsp/nucleo144-l4r5zi"
 
-pkg.deps.UART_0:
-    - "@apache-mynewt-core/hw/drivers/uart/uart_hal"
-pkg.deps.UART_1:
-    - "@apache-mynewt-core/hw/drivers/uart/uart_hal"
-pkg.deps.UART_2:
-    - "@apache-mynewt-core/hw/drivers/uart/uart_hal"
-pkg.deps.UART_BITBANG:
-    - "@apache-mynewt-core/hw/drivers/uart/uart_bitbang"
-pkg.deps.BSP_POWER_SETUP:
-    - "libs/lowpower_mgnt"
+pkg.init:
+    LPMgr_init: 50  # Call LPMgr_init() to initialise the service during startup
