--- a/targets/stm32l4_my_sensor/target.yml
+++ b/targets/stm32l4_my_sensor/target.yml
@@ -1,7 +1,7 @@
 # Target Settings
 
 # Application that will be targeted
-target.app:           apps/blink
+target.app:           apps/my_button_app
 
 # Board Support Package (BSP) for the target
 target.bsp:           "hw/bsp/nucleo144-l4r5zi"
