lp mode mgnt implementation in libs/buffered_serial to setup the uart in DEEPSLEEP mode when it's halted

--- a/libs/buffered_serial/pkg.yml
+++ b/libs/buffered_serial/pkg.yml
@@ -31,6 +31,8 @@ pkg.deps:
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/libc/baselibc"  #  Baselibc, the tiny version of standard C library
+pkg.deps.SERIAL_LPMODE:
+    - "libs/lowpower_mgnt"
 
 # Initialisation functions to be called by sysinit() during startup.
 # Mynewt consolidates the initialisation functions into sysinit()
