[WIP] TinyGPS with PUBX support integration

--- a/apps/my_button_app/syscfg.yml
+++ b/apps/my_button_app/syscfg.yml
@@ -92,7 +92,7 @@ syscfg.vals:
 
     ###########################################################################
     # GPS Settings
-    GPS_DEVICE:         '""'#'"gps_neo6m"'
+    GPS_DEVICE:         '"gps_neo6m"'
     GPS_POLL_TIME:      (60 * 1000)
 
     ###########################################################################
