--- a/hw/bsp/nucleo144-l4r5zi/pkg.yml
+++ b/hw/bsp/nucleo144-l4r5zi/pkg.yml
@@ -54,5 +54,5 @@ pkg.deps.BSP_POWER_SETUP:
 
 #  Linker flags
 pkg.lflags: 
-#    - -Wl,-wrap,os_tick_init     #  Rename all os_tick_init() references to __wrap_os_tick_init(), so that we can provide a custom implementation
-#    - -Wl,-wrap,os_tick_idle     #  Rename all os_tick_idle() references to __wrap_os_tick_idle(), so that we can provide a custom implementation
+    - -Wl,-wrap,os_tick_init     #  Rename all os_tick_init() references to __wrap_os_tick_init(), so that we can provide a custom implementation
+    - -Wl,-wrap,os_tick_idle     #  Rename all os_tick_idle() references to __wrap_os_tick_idle(), so that we can provide a custom implementation
