--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -96,6 +96,87 @@
                     "MIDebuggerPath":"C:\\Program Files (x86)\\GNU Arm Embedded Toolchain\\7 2018-q2-update\\bin\\arm-none-eabi-gdb.exe",
                     "debugServerPath":"C:\\Dev\\OpenOCD-20200729-0.10.0\\bin\\openocd.exe",              
                 }
+            },
+            {
+                "name":"Debug w/ J-LINK",
+                "type":"cortex-debug",
+                "request":"launch",
+                "stopAtEntry":true,
+                "cwd":"${workspaceRoot}",
+                "environment":[],
+                "externalConsole":false,
+                "executable":"${workspaceRoot}\\bin\\targets\\stm32l4_my_sensor\\app\\apps\\${input:appSelector}\\${input:appSelector}.elf",
+                "serverpath": "C:\\Program Files (x86)\\SEGGER\\JLink\\JLinkGDBServerCL.exe",
+                "servertype": "jlink",
+                "device": "STM32L4R5ZI",
+                "interface": "SWD",
+                "semihosting": "enable",
+                "serverLaunchTimeout":20000,
+                "filterStderr":true,
+                "filterStdout":true,
+                "serverStarted":"target halted due to debug-request, current mode: Thread",
+                "setupCommands":[
+                    {
+                        "text":"-environment-cd ${workspaceRoot}\\bin\\targets\\stm32l4_my_sensor\\app\\apps\\${input:appSelector}\\"
+                    },
+                    {
+                        "text":"-target-select remote localhost:3333",
+                        "description":"connect to target",
+                        "ignoreFailures":false
+                    },
+                    {
+                        "text":"-interpreter-exec console \"set remotetimeout 5\"",
+                        "description":"Set the timeout limit to wait for the remote target to respond to num seconds. The default is 2 seconds",
+                        "ignoreFailures":false
+                    },
+                    {
+                        "text":"-file-exec-and-symbols ${input:appSelector}.elf",
+                        "description":"load file",
+                        "ignoreFailures":false
+                    },
+                    {
+                        "text":"-interpreter-exec console \"monitor endian little\"",
+                        "ignoreFailures":false
+                    },
+                    {
+                        "text":"-interpreter-exec console \"monitor reset\"",
+                        "ignoreFailures":false
+                    },
+                    {
+                        "text":"-interpreter-exec console \"monitor halt\"",
+                        "ignoreFailures":false
+                    },
+                    {
+                        "text":"-interpreter-exec console \"monitor arm semihosting enable\"",
+                        "ignoreFailures":false
+                    },
+                    {
+                        "text":"-target-download",
+                        "description":"flash target",
+                        "ignoreFailures":false
+                    }
+                ],
+                "logging":{
+                    "moduleLoad":true,
+                    "trace":true,
+                    "engineLogging":true,
+                    "programOutput":true,
+                    "exceptions":true
+                },
+                "linux":{
+                    "MIMode":"gdb",
+                    "MIDebuggerPath":"/usr/bin/arm-none-eabi-gdb",
+                    "debugServerPath":"openocd"
+                },
+                "osx":{
+                    "MIMode":"gdb",
+                    "MIDebuggerPath":"/usr/local/bin/arm-none-eabi-gdb",
+                    "debugServerPath":"openocd"
+                },
+                "windows":{
+                    "MIMode":"gdb",
+                    "MIDebuggerPath":"C:\\Program Files (x86)\\GNU Arm Embedded Toolchain\\7 2018-q2-update\\bin\\arm-none-eabi-gdb.exe",
+                }
             }
         ]
 }
